Few fixes for message layout on mobile devices

--- a/style/theme/_style_config.scss
+++ b/style/theme/_style_config.scss
@@ -6,7 +6,7 @@ $responsive-hide-logo:					false;	// Hide logo on mobile devices. true or false
 
 $show-forum-title:						false;	// true or false
 
-$profile-width:							750px;
+$profile-width:							150px;
 $post-margin:							($profile-width + 10px);
 
 $use-wrapper:							true;	// true or false
