--- a/style/theme/content.scss
+++ b/style/theme/content.scss
@@ -1065,33 +1065,33 @@ dd.profile-contact {
 	top: -3px;
 	left: -3px;
 	pointer-events: none;
-}
 
-.online-ribbon span {
-	display: block;
-	font-weight: 500;
-	font-style: normal;
-	width: 100px;
-	font-size: 11px;
-	line-height: 18px;
-	height: 18px;
-	text-align: center;
-	position: absolute;
-	top: 17px;
-	white-space: nowrap;
-	// right: -25px;
-	// -webkit-transform: rotate(45deg);
-	// -ms-transform: rotate(45deg);
-	// transform: rotate(45deg);
-	left: -25px;
-	-webkit-transform: rotate(-45deg);
-	-ms-transform: rotate(-45deg);
-	transform: rotate(-45deg);
-}
+	span {
+		display: block;
+		font-weight: 500;
+		font-style: normal;
+		width: 100px;
+		font-size: 11px;
+		line-height: 18px;
+		height: 18px;
+		text-align: center;
+		position: absolute;
+		top: 17px;
+		white-space: nowrap;
+		// right: -25px;
+		// -webkit-transform: rotate(45deg);
+		// -ms-transform: rotate(45deg);
+		// transform: rotate(45deg);
+		left: -25px;
+		-webkit-transform: rotate(-45deg);
+		-ms-transform: rotate(-45deg);
+		transform: rotate(-45deg);
 
-.online-ribbon span + span {
-	opacity: .3;
-	z-index: 29;
+		+ span {
+			opacity: .3;
+			z-index: 29;
+		}
+	}
 }
 
 .panel.online > .inner {
@@ -1104,7 +1104,7 @@ dd.profile-contact {
 	width: 92px;
 	height: 92px;
 	background: transparent none 50% 50% no-repeat;
-	background-size: 92px 92px;
+	background-size: cover;
 }
 
 /* Profile used on view-profile */
