--- a/style/theme/responsive.scss
+++ b/style/theme/responsive.scss
@@ -485,16 +485,19 @@ fieldset.polls dd.resultbar, fieldset.polls dd.poll_option_percent {
 	margin: 0;
 }
 
-.postprofile .has-avatar .avatar-container {
+.postprofile .has-avatar .avatar-container,
+.postprofile .no-avatar .avatar-container {
 	margin: 0;
 	overflow: inherit;
+	float: left;
+	padding-right: 5px;
 }
 
 .postprofile .avatar-container:after {
 	clear: none;
 }
 
-.postprofile .avatar {
+.postprofile .avatar, .postprofile .no-avatar .avatar-container {
 	margin-right: 5px;
 }
 
@@ -502,6 +505,11 @@ fieldset.polls dd.resultbar, fieldset.polls dd.poll_option_percent {
 	width: auto !important;
 	height: auto !important;
 	max-height: 32px;
+}
+
+.no-avatar .avatar-container {
+	width: 32px;
+	height: 32px;
 }
 
 .has-profile .postbody h3 {
@@ -514,8 +522,23 @@ fieldset.polls dd.resultbar, fieldset.polls dd.poll_option_percent {
 	top: 15px;
 }
 
-.online {
-	background-size: 40px;
+.online-ribbon {
+	width: 35px;
+	height: 35px;
+	top: -1px;
+	left: -1px;
+
+	span {
+		width: 50px;
+		font-size: 6px;
+		line-height: 10px;
+		height: 10px;
+		text-align: center;
+		position: absolute;
+		top: 8px;
+		white-space: nowrap;
+		left: -12px;
+	}
 }
 
 /* Misc stuff
